@@ -1,6 +1,10 @@
 # ChangeLog for www-apps/drraw
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/drraw/ChangeLog,v 1.8 2007/02/22 00:29:45 jokey Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/www-apps/drraw/ChangeLog,v 1.9 2008/02/22 17:06:43 hollow Exp $
+
+  22 Feb 2008; Benedikt Böhm <hollow@gentoo.org> drraw-2.0.1.ebuild,
+  drraw-2.1.3.ebuild:
+  ebuild cleanup wrt #208584
 
   22 Feb 2007; Markus Ullmann <jokey@gentoo.org> ChangeLog:
   Redigest for Manifest2
